[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "prompt-helm-sdk"
version = "0.2.0"
description = "Official Python SDK for PromptHelm — call your managed prompts from any application."
license = { text = "MIT" }
authors = [{ name = "Runivox", email = "support@prompthelm.app" }]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["prompthelm", "llm", "openai", "anthropic", "prompt", "ai", "gateway"]
dependencies = ["httpx>=0.27,<1.0"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
  "build>=1.2",
  "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://prompthelm.app"
Documentation = "https://docs.prompthelm.app"
Repository = "https://github.com/Runivox/prompt-helm-sdk-python"
"Bug Tracker" = "https://github.com/Runivox/prompt-helm-sdk-python/issues"
Changelog = "https://github.com/Runivox/prompt-helm-sdk-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_helm"]

[tool.hatch.build.targets.sdist]
include = [
  "src/prompt_helm",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "SIM", "C4", "PTH"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_decorators = true
no_implicit_reexport = false
files = ["src/prompt_helm"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]
